force-app/main/default/objects/HCP_Profile__c/HCP_Profile__c.object-meta.xml
<CustomObject>
    <label>HCP Profile</label>
    <nameField>
        <label>HCP Profile</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HCPProfiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>