force-app/main/default/objects/HCP_Profile__c/fields/Department_c__c.field-meta.xml
<CustomField>
    <fullName>Department_c__c</fullName>
    <label>Department__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>