force-app/main/default/objects/HCP_Profile__c/fields/ExperienceInYears__c.field-meta.xml
<CustomField>
    <fullName>ExperienceInYears__c</fullName>
    <label>ExperienceInYears</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>