force-app/main/default/objects/HCP_Profile__c/fields/HCP_Image_c__c.field-meta.xml
<CustomField>
    <fullName>HCP_Image_c__c</fullName>
    <label>HCP_Image__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>