force-app/main/default/objects/HCP_Profile__c/fields/HCP_Name_c__c.field-meta.xml
<CustomField>
    <fullName>HCP_Name_c__c</fullName>
    <label>HCP_Name__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>