force-app/main/default/objects/HCP_Profile__c/fields/SkillSet_c__c.field-meta.xml
<CustomField>
    <fullName>SkillSet_c__c</fullName>
    <label>SkillSet__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>