force-app/main/default/objects/HCP_Profile__c/fields/SkillSetDescription_c__c.field-meta.xml
<CustomField>
    <fullName>SkillSetDescription_c__c</fullName>
    <label>SkillSetDescription__c</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>