force-app/main/default/objects/HCP_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>HCP_Name_c__c</columns>
    <columns>HCP_Image_c__c</columns>
    <columns>ExperienceInYears__c</columns>
    <columns>SkillSet_c__c</columns>
    <columns>Department_c__c</columns>
    <columns>Location_c__c</columns>
    <columns>SkillSetDescription_c__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>